Now configuration file cards.json is accessed in jar package.
Fixed notification error on invalid nickname.

Handled endGame disconnecting every player after win notification.